* 0.96

- Add AbstractConfigurationAwareModule for accessing config at binding time
- Upgrade to Airbase 28
- Upgrade to Guava 18.0
- Remove server archetype builders
- Remove deprecated AsyncHttpClient and bindAsyncHttpClient()
- Un-deprecate discovery.uri config property

* 0.95

- Add AsyncResponseHandler utility for building async HTTP responses
- Add Add Announcer.forceAnnounce() and ServiceSelector.refresh()
- Add more utility methods to Closeables
- Name and group Jetty HTTP client threads
- Always use daemon threads in HTTP client
- Add getResponseBytes() and getResponseBody() to FullJsonResponseHandler
- Change Duration.nanosSince() convert to most succinct unit

* 0.94

- Add min/max validators for DataSize
- Allow JettyHttpClient to configure maxRequestsQueuedPerDestination
- Add Jersey AsyncContextDelegateProvider implementation
- Upgrade to Airbase 26
- Always remove GZIP handler from JettyHttpClient
- Switch BoundedExecutor queue to ConcurrentLinkedQueue

* 0.93

- Add JAX-RS mapper for Smile encoded data
- Set thread context class loader in thread factories

* 0.92

- Upgrade to Jersey 2.9.1
- Add JaxrsBinder for explicit resource binding
- Add JaxrsModule constructor parameter to require explicit bindings
- Add missing synchronization on DecayCounter.merge

* 0.91

- Change packaging to not include zip file dependencies

* 0.90

- Add AbstractEventClient

* 0.89

- [Bug] Fix inadvertent masking of errors when detecting jmx agent
- Allow TimeStat unit to be specified at instantiation
- Add BoundedExecutor

* 0.88

- Add HyperLogLog
- [Bug] Max response size in HttpClient was hard-coded
- Optimize buffer management in HttpClient response handler
- Remove GZIP handler from HttpClient
- Fix failing unit tests in Java 8

* 0.87

- Upgrade to Jetty 9.1.3
- [Bug] Expose HttpClient stats via JMX
- Add support for IPv6 addresses to HttpUriBuilder

* 0.86

- Upgrade to Jetty 9.1.2
- Added new JettyHttpClient