@@ -48,6 +48,7 @@ public class TestHttpServerConfig
                 .setAdminMinThreads(2)
                 .setAdminMaxThreads(200)
                 .setMaxRequestHeaderSize(null)
+                .setShowStackTrace(true)
         );
     }
  
@@ -73,6 +74,7 @@ public class TestHttpServerConfig
                 .put("http-server.admin.threads.min", "3")
                 .put("http-server.admin.threads.max", "4")
                 .put("http-server.max-request-header-size", "32kB")
+                .put("http-server.show-stack-trace", "false")
                 .build();
 
         HttpServerConfig expected = new HttpServerConfig()
@@ -93,7 +95,8 @@ public class TestHttpServerConfig
                 .setAdminEnabled(false)
                 .setAdminPort(3)
                 .setAdminMinThreads(3)
-                .setAdminMaxThreads(4);
+                .setAdminMaxThreads(4)
+                .setShowStackTrace(false);
 
         ConfigAssertions.assertFullMapping(properties, expected);
     }
